--- a/Working with Teams/integrations.mdx
+++ b/Working with Teams/integrations.mdx
@@ -12,12 +12,12 @@ Once you’ve connected Slack to your organization, you’ll be able to initiali
 
 1. In the **Integrations** tab on your [Settings](https://preview.devin.ai/settings/integrations) page, click the “Connect” button to integrate your organization with the Devin Slack app.  You have to be a Slack Admin to set up this integration.
     
-    ![Screenshot 2024-06-10 at 12.23.00 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b5f66c26-53cb-4ded-b7f5-baf6fd88d4e7/Screenshot_2024-06-10_at_12.23.00_AM.png)
+    ![Settings > Integrations](/images/settings_integrations.png)
     
 2. Once you’ve completed the flow, ensure that your status has updated to look like this.
     
-    ![Screenshot 2024-06-10 at 12.27.16 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/effc3974-6e6a-4c98-9b4f-0b060bc359c1/Screenshot_2024-06-10_at_12.27.16_AM.png)
-    
+    ![Slack Configuration](/images/slack_integration.png)
+
 
 ### Slack User Integration
 
