--- a/Working with Teams/integrations.mdx
+++ b/Working with Teams/integrations.mdx
@@ -11,13 +11,10 @@ Once you’ve connected Slack to your organization, you’ll be able to initiali
 ### Slack Organization Integration
 
 1. In the **Integrations** tab on your [Settings](https://preview.devin.ai/settings/integrations) page, click the “Connect” button to integrate your organization with the Devin Slack app.  You have to be a Slack Admin to set up this integration.
-    
     ![Settings > Integrations](/images/settings_integrations.png)
     
 2. Once you’ve completed the flow, ensure that your status has updated to look like this.
-    
     ![Slack Configuration](/images/slack_integration.png)
-
 
 ### Slack User Integration
 
@@ -26,15 +23,13 @@ Individual users can set up their Slack “Connected User”  at https://preview
 This is not required, but once set up:
 
 1. Users will be able to use the “send to channel” feature, which mirrors sessions started via the web app on Slack. This enables anyone in the channel (with Devin access) to quickly follow along and collaborate with Devin.
-    1. both Devin and the user need to be added to the same Slack channels for this feature to show up!
-    
-    ![Screenshot 2024-07-04 at 8.38.44 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/d0e92779-d764-4783-b0a1-cf0d94188122/Screenshot_2024-07-04_at_8.38.44_PM.png)
+    a. both Devin and the user need to be added to the same Slack channels for this feature to show up!
+    ![Send to Slack](/images/slack_notif.png)
     
 2.  Devin sessions started via Slack will show up with the proper Creator name, rather than “Slack User”.
 
 Once your integration is complete, your interface should look like this: 
-
-![Screenshot 2024-06-10 at 12.27.49 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/a33edef7-317c-4c39-951c-d4ff8e517b73/Screenshot_2024-06-10_at_12.27.49_AM.png)
+    ![Integration Complete](/images/integration_done.png)
 
 > Note: If your user account is not properly connecting, ensure that your Slack email is the same as your email in https://preview.devin.ai/settings. If not, please authenticate the correct email on Slack.
 > 
@@ -42,12 +37,10 @@ Once your integration is complete, your interface should look like this:
 ### How to use Devin from Slack
 
 Once you’ve installed the Devin Slack integration, simply trigger Devin with @Devin in any channel. You may include attachments to your message.
-
-![Screenshot 2024-04-22 at 4.28.54 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/0215f163-eea3-481c-8cf9-96a06444eb84/Screenshot_2024-04-22_at_4.28.54_PM.png)
+    ![@Devin](/images/slack_message.png)
 
 Devin will respond in-thread to your session. Now, you can communicate back and forth as you would in the regular chat interface.
-
-![Screenshot 2024-04-22 at 4.28.01 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/298c4822-16aa-4dff-ae58-02e6b84dd6b7/Screenshot_2024-04-22_at_4.28.01_PM.png)
+    ![Slack Chat](/images/slack_chat.png)
 
 As usual, sessions without any response for 24 hours will automatically expire.
 
@@ -68,14 +61,12 @@ As usual, sessions without any response for 24 hours will automatically expire.
 ### Turn on Slack Notifications
 
 You can enable Slack notifications for specific runs and Devin will privately message you whenever there’s a status update. To do so, simply click the Slack icon at the top of any run you’d like to be notified for.
-
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/dfee4719-2530-4a72-98fc-8209d01620bb/Untitled.png)
+    ![See in Slack](/images/see_in_slack.png)
 
 ### Dedicated Devin channel
 
 We recommend setting up an specific channel (e.g. **#devin-runs**) to keep all of your Devin requests in one location.
-
-![Screenshot 2024-04-22 at 4.22.54 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/e69b08b6-16b3-4d45-af92-02a5dcade231/Screenshot_2024-04-22_at_4.22.54_PM.png)
+    ![Channel](/images/slack_channel.png)
 
 ### Permissions
 
