--- a/security.mdx
+++ b/security.mdx
@@ -11,65 +11,64 @@ All data transmission is encrypted in transit and at rest. Production software i
 Access to our cloud environment in AWS is granted on an as-required basis based on business roles and only a small number of employees or contractors are granted direct access to production systems.
 </Accordion>
     
-- **General Security Practices**
+<Accordion title="General Security Practices">
+All employees and contractors are required to use multi-factor authentication on all main work applications. All employees and contractors also receive annual training about security best practices, including good password management and how to identify social engineering and phishing scams.
+</Accordion>
     
-    All employees and contractors are required to use multi-factor authentication on all main work applications. All employees and contractors also receive annual training about security best practices, including good password management and how to identify social engineering and phishing scams.
+<Accordion title="Third-party audits and certification">
+Cognition obtained SOC 2 Type I certification and conducted Security Training in March 2024 for all employees at Cognition. As part of the SOC 2 audit, Cognition's auditors reviewed all of Cognition's security policies along with our AWS and Github controls.
     
-- **Third-party audits and certification**
-    
-    Cognition obtained SOC 2 Type I certification and conducted Security Training in March 2024 for all employees at Cognition. As part of the SOC 2 audit, Cognition's auditors reviewed all of Cognition's security policies along with our AWS and Github controls.
-    
-    You can request a copy of our SOC 2 Type I at security@cognition.ai.
-    
+You can request a copy of our SOC 2 Type I at security@cognition.ai.
+</Accordion>
 
 ## Privacy & Intellectual Property
 
-- **How does Cognition use and process data run through and/or accessed by Devin?**
+<Accordion title="How does Cognition use and process data run through and/or accessed by Devin?">
+Cognition  processes data based on the application Customers use to interact with Devin. Devin can be accessed via web application, Github or Slack integration. For the web application, Cognition only processes data actively provided by the authorized user prompting Devin; for the Github and Slack integrations, the administrator installing the integration can review and manage all permissions granted to Devin.
     
-    Cognition  processes data based on the application Customers use to interact with Devin. Devin can be accessed via web application, Github or Slack integration. For the web application, Cognition only processes data actively provided by the authorized user prompting Devin; for the Github and Slack integrations, the administrator installing the integration can review and manage all permissions granted to Devin.
-    
-    Cognition uses Customer data to:
+Cognition uses Customer data to:
     
     - Deliver, maintain and update services provided to the Customer per their configuration and type of Devin access (e.g. web application, Github integration or Slack integration) to make sure the software is up-to-date and operational.
     - Troubleshoot, prevent and resolve issues such as product-related issues, software bugs or security incidents to maintain service functionality and reliability.
-- **What data retention policy does Cognition maintain?**
+</Accordion>
+
+<Accordion title="What data retention policy does Cognition maintain?">    
+Cognition only retains data processed through Devin for the duration of the relationship with a given Customer, unless otherwise specified by the Customers. 
     
-    Cognition only retains data processed through Devin for the duration of the relationship with a given Customer, unless otherwise specified by the Customers. 
+Any Feedback Data and User Interaction Data are retained as long as needed and as determined by Cognition. 
+</Accordion>
+
+<Accordion title="Does Cognition train based on your data?">
+No, Cognition doesn’t train models based on any of our Customers’ data, but with your consent we may use your data to finetune your organization’s models to improve your experience with Devin.
+</Accordion>
+
+<Accordion title="What are the main IP considerations regarding the output produced by Devin?">    
+The output — code, work product, or other — produced by Devin is considered the user’s intellectual property and can be used for the Customer’s commercial purposes, with the exception of using the output to train models that would attempt to reverse engineer and/or build a competing product to Devin.
+</Accordion>
     
-    Any Feedback Data and User Interaction Data are retained as long as needed and as determined by Cognition. 
+<Accordion title="Github Integration Considerations">
+When setting up the Github integration, users can select which repositories Devin can access, with permissions adjustable through Github's App Settings during and post-installation. 
+
+For more details on the requested permissions and security considerations go to [GitHub Integration Guide](https://www.notion.so/GitHub-Integration-Guide-f839572ed60a4d41ae2620c08c2fdb62?pvs=21).
+</Accordion>
     
-- **Does Cognition train based on your data?**
+<Accordion title="Slack Integration Considerations">    
+In Slack, Devin doesn’t read, process or store any data in your Slack instance other than the information provided when @Devin is tagged, initially prompted and when any additional information provided within the Slack thread while the session is ongoing.  
     
-    No, Cognition doesn’t train models based on any of our Customers’ data, but with your consent we may use your data to finetune your organization’s models to improve your experience with Devin.
-    
-- **What are the main IP considerations regarding the output produced by Devin?**
-    
-    The output — code, work product, or other — produced by Devin is considered the user’s intellectual property and can be used for the Customer’s commercial purposes, with the exception of using the output to train models that would attempt to reverse engineer and/or build a competing product to Devin.
-    
-- **Github Integration Considerations**
-    
-    When setting up the Github integration, users can select which repositories Devin can access, with permissions adjustable through Github's App Settings during and post-installation. 
-    
-    For more details on the requested permissions and security considerations go to [GitHub Integration Guide](https://www.notion.so/GitHub-Integration-Guide-f839572ed60a4d41ae2620c08c2fdb62?pvs=21).**Github Integration Considerations**
-    
-- **Slack Integration Considerations**
-    
-    In Slack, Devin doesn’t read, process or store any data in your Slack instance other than the information provided when @Devin is tagged, initially prompted and when any additional information provided within the Slack thread while the session is ongoing.  
-    
-    For more details on the requested permissions and security considerations go to [Slack Integration Guide](https://www.notion.so/Slack-Integration-Guide-50c11122153d41f18e7bb31b40cf1fbd?pvs=21).
-    
+For more details on the requested permissions and security considerations go to [Slack Integration Guide](https://www.notion.so/Slack-Integration-Guide-50c11122153d41f18e7bb31b40cf1fbd?pvs=21).
+</Accordion>
 
 ## User Best Practices
 
-- **Devin Limitations**
+<Accordion title="Devin Limitations">      
+While Devin’s performance is improving daily, it can still experience hallucinations, introduce bugs into code, or suggest insecure code or procedures. Like with any coding best practices, we recommend taking the appropriate precautions with the code written by Devin such as code reviews, enabling branch protections to ensure checks are enforced before Devin can merge any changes, and any practices currently adopted in your organization to review engineers’ work.
+</Accordion>
     
-    While Devin’s performance is improving daily, it can still experience hallucinations, introduce bugs into code, or suggest insecure code or procedures. Like with any coding best practices, we recommend taking the appropriate precautions with the code written by Devin such as code reviews, enabling branch protections to ensure checks are enforced before Devin can merge any changes, and any practices currently adopted in your organization to review engineers’ work.
+<Accordion title="Secrets">
+You may need to provide Devin with credentials and keys such as passwords, API keys, cookies or other for authentication. In all cases we advise users to leverage our Secrets feature under the Settings page to share and store those credentials securely.
+</Accordion>
     
-- **Secrets**
-    
-    You may need to provide Devin with credentials and keys such as passwords, API keys, cookies or other for authentication. In all cases we advise users to leverage our Secrets feature under the Settings page to share and store those credentials securely.
-    
-- **Share Feedback**
-    
-    We’re still learning and developing Devin to be a great AI software engineer, and our Customers’ feedback is crucial for Devin’s development. We strongly encourage sharing feedback and feature requests directly with your Cognition account team or by emailing [support@cognition.ai](mailto:support@cognition.ai), and reporting incidents by emailing [security@cognition.ai](mailto:security@cognition.ai).
+<Accordion title="Share Feedback">
+We’re still learning and developing Devin to be a great AI software engineer, and our Customers’ feedback is crucial for Devin’s development. We strongly encourage sharing feedback and feature requests directly with your Cognition account team or by emailing [support@cognition.ai](mailto:support@cognition.ai), and reporting incidents by emailing [security@cognition.ai](mailto:security@cognition.ai).
+</Accordion>
     
