--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -31,10 +31,21 @@ Devin is designed to be a conversational user interface, and allows you to follo
 
 In Devin’s Workspace, you’ll find: 
 
-- **Shell** (or command-line interface): a text-based interface where Devin can input commands that interact directly with a computer's operating system.
-- **Browser**: where Devin navigates during a session to search for  information. You can watch Devin browsing through documentation, navigate through websites, download/upload upload information, and jump in to help Devin navigate thorough browsing tasks.
-- **Editor**: this is where Devin will write code. Here you can supervise, review and edit (see our [VSCode Guide](https://www.notion.so/bd89720db24e4f52bcd63489ff87e3fa?pvs=21)) the code Devin is writing.
-- **Planner**: This section provides you a running "to do" list that Devin laid out to complete the task. This gives you  visibility into how Devin plans and thinks through solving a problem.
+<CardGroup cols={2}>
+  <Card title="Shell" icon="square-1">
+    a text-based interface where Devin can input commands that interact directly with a computer's operating system.
+  </Card>
+  <Card title="Browswer" icon="square-2">
+    where Devin navigates during a session to search for  information. You can watch Devin browsing through documentation, navigate through websites, download/upload upload information, and jump in to help Devin navigate thorough browsing tasks.
+  </Card>
+  <Card title="Editor" icon="square-3">
+    this is where Devin will write code. Here you can supervise, review and edit (see our [VSCode Guide](https://www.notion.so/bd89720db24e4f52bcd63489ff87e3fa?pvs=21)) the code Devin is writing.
+  </Card>
+  <Card title="Planner" icon="square-4">
+    this section provides you a running "to do" list that Devin laid out to complete the task. This gives you  visibility into how Devin plans and thinks through solving a problem.
+  </Card>
+</CardGroup>
+
 
 ![Screenshot 2024-06-09 at 9.16.10 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/30556b54-d6f9-45ac-aa83-f71cb89fa81f/Screenshot_2024-06-09_at_9.16.10_PM.png)
 
