--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -35,7 +35,7 @@ In Devin’s Workspace, you’ll find:
   <Card title="Shell" icon="square-1">
     a text-based interface where Devin can input commands that interact directly with a computer's operating system.
   </Card>
-  <Card title="Browswer" icon="square-2">
+  <Card title="Browser" icon="square-2">
     where Devin navigates during a session to search for  information. You can watch Devin browsing through documentation, navigate through websites, download/upload upload information, and jump in to help Devin navigate thorough browsing tasks.
   </Card>
   <Card title="Editor" icon="square-3">
