--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -36,7 +36,7 @@ In Devin’s Workspace, you’ll find:
     a text-based interface where Devin can input commands that interact directly with a computer's operating system.
   </Card>
   <Card title="Browser" icon="square-2">
-    where Devin navigates during a session to search for  information. You can watch Devin browsing through documentation, navigate through websites, download/upload upload information, and jump in to help Devin navigate thorough browsing tasks.
+    watch Devin browse through documentation, navigate through websites, download/upload upload information, and jump in to help Devin navigate thorough browsing tasks.
   </Card>
   <Card title="Editor" icon="square-3">
     this is where Devin will write code. Here you can supervise, review and edit (see our [VSCode Guide](https://www.notion.so/bd89720db24e4f52bcd63489ff87e3fa?pvs=21)) the code Devin is writing.
