--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -3,6 +3,7 @@ title: "Introducing Devin"
 description: "Devin is the first autonomous AI software engineer"
 ---
 
+    ![Devin](/images/devin_session.png)
 Devin is an autonomous AI software engineer that can write, run and test code, helping software engineers work on personal tasks or their team projects. Devin has helped build websites, web applications, review and fix bugs, support code migrations and even day-to-day assistant tasks like ordering on Amazon or DoorDash!
 
 Here are just some of the use cases the Cognition team and Devin's early users have used Devin for:
