--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -31,7 +31,9 @@ If you do not have access and your name is already on our waitlist, we do small 
 
 Devin is designed to be a conversational user interface, and allows you to follow Devin’s development and planning process in the **Workspace** section.
 
-<img height="200" noZoom src="/https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/d7295090-5036-4bdd-b742-491fff4d0691/Screenshot_2024-06-09_at_9.12.00_PM.png" />
+<Frame>
+    ![Devin](/images/editor_view.png)
+</Frame>
 
 In Devin’s Workspace, you’ll find: 
 
