--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -52,8 +52,9 @@ In Devin’s Workspace, you’ll find:
   </Card>
 </CardGroup>
 
-
-![Screenshot 2024-06-09 at 9.16.10 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/30556b54-d6f9-45ac-aa83-f71cb89fa81f/Screenshot_2024-06-09_at_9.16.10_PM.png)
+<Frame>
+    ![Devin](/images/workspace_grid.png)
+</Frame>
 
 ## Demo
 
