--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -58,7 +58,15 @@ In Devin’s Workspace, you’ll find:
 
 ## Demo
 
-https://www.youtube.com/watch?v=fjHtjT7GO1c
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/watch?v=fjHtjT7GO1c"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 ## Limitations
 
