--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -61,7 +61,7 @@ In Devin’s Workspace, you’ll find:
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=fjHtjT7GO1c"
+  src="https://www.youtube.com/embed/fjHtjT7GO1c"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
