--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -4,7 +4,7 @@ description: "Devin is the first autonomous AI software engineer"
 ---
 
 <Frame>
-    ![Devin](/images/devin_session.png)
+    ![Devin](/images/devin_sesh.png)
 </Frame>
 
 Devin is an autonomous AI software engineer that can write, run and test code, helping software engineers work on personal tasks or their team projects. Devin has helped build websites, web applications, review and fix bugs, support code migrations and even day-to-day assistant tasks like ordering on Amazon or DoorDash!
