--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -5,7 +5,11 @@ description: "Start building with Devin"
 
 ## Give Devin access to your GitHub
 
-[Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/2ef30e71-3796-4dbe-8ed7-7c7da4704104/Untitled.mp4)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/Untitled.mp4"
+></video>
 
 > ⭐ Refer to the following [step-by-step GitHub Integration Guide](https://www.notion.so/GitHub-Integration-Guide-f839572ed60a4d41ae2620c08c2fdb62?pvs=21) for more information.
 > 
