--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -17,7 +17,7 @@ description: "Start building with Devin"
 
 2. Select the repo(s) you’d like to integrate, which you can do from the **Settings** page. 
 
-Ensure you are integrating the right GitHub organization with the right Devin account (e.g. if you are connecting your personal repo, your account should say your name ****at the top left of your screen).
+Ensure you are integrating the right GitHub organization with the right Devin account (e.g. if you are connecting your personal repo, your account should say your name at the top left of your screen).
 
 3. If you cannot yet integrate your organization’s GitHub, integrate a personal GitHub account.
 
