--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -51,3 +51,7 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
     4. You can now find all your machine snapshots in the top right section before starting a session. Remember to select the machine snapshot you want to use ***before*** starting a new session.
         
         ![Screenshot 2024-06-10 at 12.18.21 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/86074484-3b15-4fa4-8795-bf4f888906f4/Screenshot_2024-06-10_at_12.18.21_AM.png)
+
+## All Done!
+
+Congrats! You’ve onboarded Devin so you can start working on any project. If you need support drop us an email at support@cognition.ai.
