--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -19,26 +19,21 @@ This is now possible in the [Settings > Secrets](http://preview.devin.ai/setting
 
 There are 3 types of secrets available:
 
-1. **Plain Text**
-    
-    This is most suitable for secrets with a single value, such as an API key or an SSH key. Just paste in the value directly.
-    
-2. **Key-Value**
-    
-    Use this for more multi-variable logins. For instance, to sign into Amazon, Devin needs both an email and a password to sign in successfully. Add the field name under ‘Key’ (e.g. email, username, password, etc.) and add the input Devin should use under ‘Value’. ‘Value’ is always masked and cannot be viewed any other user in your organization.
+<Accordion title="Plain Text">
+This is most suitable for secrets with a single value, such as an API key or an SSH key. Just paste in the value directly.
+</Accordion>
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/ee505763-2520-4658-a0de-5a085d561564/Untitled.png)
+<Accordion title="Key-Value">
+Use this for more multi-variable logins. For instance, to sign into Amazon, Devin needs both an email and a password to sign in successfully. Add the field name under ‘Key’ (e.g. email, username, password, etc.) and add the input Devin should use under ‘Value’. ‘Value’ is always masked and cannot be viewed any other user in your organization.
+</Accordion>
 
-3. **Site Cookies**
+<Accordion title="Site Cookies">
+In addition to Key-Value and Plain Text secrets, you can also add site cookies. **Cookies “hold” your authenticated state**; if you are logged into some site, then giving Devin your cookies for that site will make it so that Devin is automatically logged in for the same site.
     
-    In addition to Key-Value and Plain Text secrets, you can also add site cookies. **Cookies “hold” your authenticated state**; if you are logged into some site, then giving Devin your cookies for that site will make it so that Devin is automatically logged in for the same site.
+We support both key-value secrets and cookies because cookies can sometimes be insufficient by themselves. For example, on Amazon, Devin may be logged into the site while shopping or adding to cart, but Amazon might require an additional layer of password confirmation when it comes time to check out.
     
-    We support both key-value secrets and cookies because cookies can sometimes be insufficient by themselves. For example, on Amazon, Devin may be logged into the site while shopping / adding to cart, but Amazon might require an additional layer of password confirmation when it comes time to check out.
-    
-    With this new capability, Devin will have access to any sites you provided valid cookies for. ⚠️ **Note that this is a beta feature and may not work for some sites,** but we’ve found that it works for Amazon, Resy and DoorDash, and are excited to explore together what else this enables!
-    
-
 Here is an example of cookies working on Resy to book a restaurant reservation (link to session [here](https://preview.devin.ai/devin/dd19651a6b0745388a28d0f6f45d38b6)): 
+</Accordion>    
 
 [Screen Recording 2024-04-23 at 8.05.38 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/6d48746a-51d4-46f6-a21c-42ee93afa8b2/Screen_Recording_2024-04-23_at_8.05.38_PM.mov)
 
