--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -35,7 +35,11 @@ We support both key-value secrets and cookies because cookies can sometimes be i
 Here is an example of cookies working on Resy to book a restaurant reservation (link to session [here](https://preview.devin.ai/devin/dd19651a6b0745388a28d0f6f45d38b6)): 
 </Accordion>    
 
-[Screen Recording 2024-04-23 at 8.05.38 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/6d48746a-51d4-46f6-a21c-42ee93afa8b2/Screen_Recording_2024-04-23_at_8.05.38_PM.mov)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/secrets.mov"
+></video>
 
 Notice how with cookies, when Devin navigates to the Resy website, Devin is already logged in to the user’s account. As a result, when Devin goes to make the reservation, the user’s card details are already filled out!
 
