--- a/Onboard Devin/knowledge.mdx
+++ b/Onboard Devin/knowledge.mdx
@@ -9,7 +9,11 @@ Just like onboarding a new engineer, onboarding Devin requires an initial invest
 
 Knowledge is a collection of tips, advice, and instructions that Devin can reference in all runs. You can continually add to Devin’s bank of knowledge over time, and Devin will **automatically recall relevant knowledge** as necessary.
 
-[Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b633133a-76a0-4a02-9898-45903ad56c67/Untitled.mp4)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/knowledge.mp4"
+></video>
 
 Use to the Knowledge feature to share documentation, tips, custom internal libraries, and other materials that Devin needs to be a successful contributor to your organization. You can set up knowledge for your own Devin account or your organization.
 
