--- a/Onboard Devin/snapshots.mdx
+++ b/Onboard Devin/snapshots.mdx
@@ -33,16 +33,18 @@ You can use machine snapshots to:
 1. Once your run has stopped, click the “Create machine snapshot” button in the bottom right corner of Devin’s Workspace. 
     
     This feature is only available when Devin is awaiting a response or after the session ends.
-    
 
-![Screenshot 2024-06-16 at 3.56.20 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/7aac4e92-b9bf-46f0-9c2c-7cd41f442756/187582f6-10d7-46e9-b0bd-0874b32528ee.png)
+<Frame>
+    ![Devin](/images/snapshot1.png)
+</Frame>
 
 1. Then, fill in your snapshot name, description and the startup commands you want to run each time the snapshot is selected. 
     
     The description is used to explain the state of the machine to future Devin (who has no memory of your previous run). Once submitted, the snapshot will generally take 15-30 minutes before becoming available. In some cases when your run has already ended a long time ago, your snapshot can actually become available immediately.
     
-
-![Screenshot 2024-06-16 at 3.57.00 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/d1f0dc20-b088-4680-84f5-56e5d9c306e6/Screenshot_2024-06-16_at_3.57.00_PM.png)
+<Frame>
+    ![Devin](/images/snapshot3.png)
+</Frame>
 
 You’ll see the snapshot in the top right of a new Devin session as greyed out (pending) until it finishes and becomes available.
 
@@ -55,9 +57,9 @@ You’ll see the snapshot in the top right of a new Devin session as greyed out 
 
 Before starting your Devin run, just choose a machine snapshot from the top right corner and you’re good to go! You can start from a snapshot as many times as you want.
 
-![Screenshot 2024-06-16 at 3.53.47 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/f7185795-32bb-477d-98b2-40b49f5cf493/Screenshot_2024-06-16_at_3.53.47_PM.png)
-
-![Screenshot 2024-06-16 at 3.53.23 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/5b934a7b-24b9-4456-839d-7a96a987384b/Screenshot_2024-06-16_at_3.53.23_PM.png)
+<Frame>
+    ![Devin](/images/snapshot4.png)
+</Frame>
 
 ### Tips & Important Notes
 
