--- a/Onboard Devin/knowledge.mdx
+++ b/Onboard Devin/knowledge.mdx
@@ -21,7 +21,9 @@ Use to the Knowledge feature to share documentation, tips, custom internal libra
 
 Navigate to the **Knowledge** tab in the **Settings** page, and click “Add knowledge” in the top right.
 
-![Screenshot 2024-06-10 at 1.00.05 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/f93ec880-4a30-4f2a-a95f-923954cba2b0/Screenshot_2024-06-10_at_1.00.05_AM.png)
+<Frame>
+    ![Devin](/images/knowledge_settings.png)
+</Frame>
 
 Your **Trigger Description** will be what Devin uses to pull in the relevant Knowledge. This can be a simple phrase, sentence, or a comma separated group of relevant words. All knowledge requires a trigger description.
 
