--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -7,9 +7,9 @@ description: "Securely share credentials with Devin so it can access any tool"
 
 Every now and then we may want Devin to access a protected web resource. While Devin is working, you can provide Devin with credentials (API keys, logins, etc.) within the current conversation, like so…
 
-![Screenshot 2024-04-18 at 9.29.16 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/226994aa-cb32-4414-9f2b-3a4b7965a450/Screenshot_2024-04-18_at_9.29.16_PM.png)
-
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/1183e1af-2a7e-4cdc-a352-543b9cac45b6/Untitled.png)
+<Frame>
+    ![Devin](/images/secrets1.png)
+</Frame>
 
 ## Persisted Secrets
 
