--- a/Collaborate with Devin/machine.mdx
+++ b/Collaborate with Devin/machine.mdx
@@ -7,21 +7,23 @@ description: "Work with Devin's editor and shell in VSCode"
 
 After you kick off a run and Devin initializes its machine, click the three dots on the upper right corner and select **Use Devin’s Machine**.
 
-![Screenshot 2024-06-10 at 12.38.10 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/39276f24-8f4f-4ae3-9516-5b64dcde27a8/Screenshot_2024-06-10_at_12.38.10_AM.png)
+<Frame>
+    ![Devin](/images/vscode1.png)
+</Frame>
 
-Once selected, you’ll launch a new VSCode session like this:
+Once selected, you’ll launch a new VSCode session. Click on “**Yes, I trust the authors**” and then you can view Devin’s code:
 
-![Screenshot 2024-05-07 at 10.13.21 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b62c1fb8-d9e3-4d89-80ce-bc6b52a96575/Screenshot_2024-05-07_at_10.13.21_AM.png)
-
-We recommend clicking on “**Yes, I trust the authors**” and then you can view Devin’s code:
-
-![Screenshot 2024-05-07 at 10.13.46 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/879a3bf4-c6b3-46da-813e-0cae6d6cd08d/Screenshot_2024-05-07_at_10.13.46_AM.png)
+<Frame>
+    ![Devin](/images/vscode2.png)
+</Frame>
 
 ## Terminal
 
 You can also use VSCode to open up a terminal! To do this simply use the shortcut `Ctrl-``  or, on a Mac, use the shortcut `Cmd-j`. This will open up a terminal where you can now run any commands you like or test Devin’s code.
 
-![Screenshot 2024-05-07 at 10.19.56 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/edbe7809-fc7b-4e77-a932-558f4ba701ae/Screenshot_2024-05-07_at_10.19.56_AM.png)
+<Frame>
+    ![Devin](/images/vscode3.png)
+</Frame>
 
 ## Tips
 
