--- a/Collaborate with Devin/browser.mdx
+++ b/Collaborate with Devin/browser.mdx
@@ -5,6 +5,10 @@ description: "Help Devin navigate through its browser"
 
 Interactive Browser allows users to directly use Devin’s browser. 
 
-This feature is especially helpful for browser tasks where Devin may require assistance, such as completing CAPTCHAs, multi-factor authentication steps and more. 
+This feature is especially helpful for browser tasks where Devin may require assistance, such as completing CAPTCHAs, completing multi-factor authentication steps, navigating complex websites and more. 
 
-![Screenshot 2024-05-29 at 2.11.56 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/0c8a8503-4b01-49b0-bc7b-4a12da588f20/Screenshot_2024-05-29_at_2.11.56_AM.png)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/interactive_browser.mp4"
+></video>
