--- a/Get Started/first-run.mdx
+++ b/Get Started/first-run.mdx
@@ -7,9 +7,7 @@ This guide will give some inspiration to start working with Devin. Start with De
 
 ## Start a run with Devin
 
----
-
-We’ve seen folks build voice transcription apps, fine-tuned LLM apps, data analysis apps, scraping apps and more. Building web apps are a great way to start getting to know Devin.
+We’ve seen users build voice transcription apps, fine-tuned LLM apps, data analysis apps, scraping apps and more. Building web apps are a great way to start getting to know Devin.
 
 Get creative!
 
@@ -31,7 +29,7 @@ please self host redash server, connect a local sqlite database. add some dummy 
 
 Link to the session: [Self-host redash server](https://preview.devin.ai/sessions/675a54a158024b35a0feb8a159ed8273)
 
-🖥️ **Set up [nfoert/cardie](https://github.com/nfoert/cardie) for local development and testing**
+**Set up [nfoert/cardie](https://github.com/nfoert/cardie) for local development and testing**
 
 ```
 Get [**https://github.com/nfoert/cardie**](https://github.com/nfoert/cardie) set up and running
