--- a/Working with Teams/multidevin.mdx
+++ b/Working with Teams/multidevin.mdx
@@ -27,19 +27,29 @@ MultiDevin is very good at getting through large backlogs of smaller tasks. Use 
 
 To select MultiDevin, click the dropdown besides “Running with” and choose “MultiDevin”.
 
+<Frame>
+    ![Devin](/images/multidevin1.png)
+</Frame>
+
 To create a new MultiDevin batch, click . Fill out the fields with the necessary task information, and drag + drop a .csv into the Task box. Click “Create MultiDevin” when you’re done.
 
-![Screenshot 2024-07-19 at 6.03.25 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/70bfc4e5-2eb4-4892-bac7-ceae66a93f86/6738dd1d-4a8b-439c-8820-2fb0e3968725.png)
+<Frame>
+    ![Devin](/images/multidevin2.png)
+</Frame>
 
 Finally, select the MultiDevin task you’d like to run, configure the number of MultiDevin workers (minimum 1, maximum 10), and hit “Enter” to start your MultiDevin run!
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/fca0cd84-7b3d-4852-aac8-0c068efc534c/Untitled.png)
+<Frame>
+    ![Devin](/images/multidevin3.png)
+</Frame>
 
 Each worker will be given one task to work on.
 
 You should now see the following MultiDevin UI:
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/be7f3f78-8fa6-4bbe-b2d1-8d83ecd2e253/Untitled.png)
+<Frame>
+    ![Devin](/images/multidevin3.png)
+</Frame>
 
 ## MultiDevin fields
 
