--- a/Working with Teams/playbooks-intro.mdx
+++ b/Working with Teams/playbooks-intro.mdx
@@ -18,8 +18,9 @@ As an example of what playbooks enable, you can:
 
 And Devin will now more reliably **follow best practices for contributing to your company’s repository** —  e.g. remembering what to include in the PR description, reading PR review comments from coworkers, and sharing the PR link every time new changes are made.
 
-![Screenshot 2024-06-10 at 11.30.17 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8ac101c4-c485-4286-9180-1a5de8a739a0/Screenshot_2024-06-10_at_11.30.17_AM.png)
-
+<Frame>
+    ![Devin](/images/playbooks1.png)
+</Frame>
 
 ### Playbooks can immediately unlock Devin’s ability to contribute in a wide range of areas, but require some upfront investment to write
 
@@ -46,15 +47,18 @@ Consider writing your first playbook with a simple multi-step task you want Devi
 5. Save the file with the file extension `.devin.md` and drag-and-drop it in the web app when starting a Devin Session.
     1. Alternatively, you can create the playbook directly in the web app by clicking “Create a new Playbook”
         
-        ![Screenshot 2024-05-31 at 6.33.28 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/664e5a3c-f4cd-4e18-afea-90f2af9c7bf5/Screenshot_2024-05-31_at_6.33.28_PM.png)
-        
+<Frame>
+    ![Devin](/images/playbooks2.png)
+</Frame>        
 
 ### **Tips**
 
 - Pick a task that you’re an expert in so that you can give good advice.
 - You’ve successfully attached a playbook to a sessions if you see an blue pill appear, along with an inline component for editing the playbook before starting your session
 
-![Screenshot 2024-07-30 at 10.46.08 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/9b2404d2-f34c-4bef-9c75-962adae848e9/Screenshot_2024-07-30_at_10.46.08_PM.png)
+<Frame>
+    ![Devin](/images/playbooks3.png)
+</Frame>
 
 - You may need to iterate on the playbook a few times to cover all the mistakes Devin tends to make.
 - Devin can follow both high level instructions (e.g. “first set up a new conda environment”)  and explicit low level instructions (e.g. “To create a PR from the command line, use this command: echo -e "..." > `PR_DESCRIPTION.md` && gh pr create --body-file=`PR_DESCRIPTION.md`”)
